--- a/WhatsNew.html
+++ b/WhatsNew.html
@@ -23,10 +23,10 @@
       <ul>
 <p>
   <h1>Version 1.5 (Apr 29, 2023)</h1>
-  <ul>
-    <li>Improvements. 1. Added incrementing and decrementing buttons on the tuning tab for simply adjusting the simulation time.</li>
-       <li>                   2. Added version(build) on profile tab.</li>
-       <li>                   3. Made the megatuner image on profile tab transparent.</li>
+  <ul>  Improvements:
+   <li>  Added incrementing and decrementing buttons on the tuning tab for adjusting the simulation time more easily.</li>
+ <li>  Added version(build) number on profile tab for easier identification of the app version.</li>
+ <li>  Made the megatuner image on profile tab transparent for a more polished look.</li>
   </ul>
 </p>
 
