--- a/AppPrivacy.html
+++ b/AppPrivacy.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="Index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="WhatsNew.html">What’s New</a></li>
         <li><a href="AppPrivacy.html">App Privacy</a></li>
         <li><a href="Contact.html">Contact</a></li>
