--- a/Contact.html
+++ b/Contact.html
@@ -24,6 +24,7 @@
       <ul>
 <p>
   <h1>Christer Dalen</h1>
+  If you have any questions or feedback about our app, please don't hesitate to contact
 	Email:00215069@protonmail.com
 </p>
 
