--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Whats New</title>
+  <title>Contact - Megatuner</title>
   <link rel="icon" type="image/png" href="img/Megatuner123.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
