--- a/AppPrivacy.html
+++ b/AppPrivacy.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Whats New</title>
-    <link rel="icon" type="image/png" href="img/megatuner123.png">
+  <title>App Privacy - Megatuner</title>
+    <link rel="icon" type="image/png" href="img/Megatuner123.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
