--- a/Contact.html
+++ b/Contact.html
@@ -32,7 +32,7 @@
   </main>
   
   <footer>
-    <p>&copy; Copyright © 2023 Christer Dalen</p>
+    <p>Copyright &copy; 2023 Christer Dalen</p>
 	          <p><a href="itms-apps://itunes.apple.com/app/6444596637"> <img src="https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg" alt="Download on the App Store"> </a></p>
   </footer>
 </body>
