--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li>User-friendly interface for simple and efficient data input and analysis</li>
         <li>Advanced algorithms for accurate and precise model and PI/PID controller tuning</li>
         <li>Convert your PID controller parameters over 20 different DCS vendor forms</li>
+         <li>OPC UA communication [Future]</li>
       </ul>
       <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/b7yqsZ4sSuQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
