--- a/WhatsNew.html
+++ b/WhatsNew.html
@@ -22,6 +22,14 @@
   <main>
     <section id="hero">
       <ul>
+
+<p>
+  <h1>Version 1.6 (May 7, 2023)</h1>
+  <ul>  Improvements:
+   <li>  Improved app layout for a better user experience.</li>
+ <li>  Updated profile tab to include a link to the supporting website.</li>
+  </ul>
+</p>        
 <p>
   <h1>Version 1.5 (Apr 29, 2023)</h1>
   <ul>  Improvements:
