--- a/WhatsNew.html
+++ b/WhatsNew.html
@@ -28,6 +28,7 @@
   <ul>  Improvements:
    <li>  Improved app layout for a better user experience.</li>
  <li>  Updated profile tab to include a link to the supporting website.</li>
+  <li> Changed the app icon for a fresh look.</li>
   </ul>
 </p>        
 <p>
