--- a/WhatsNew.html
+++ b/WhatsNew.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Whats New - Megatuner</title>
-    <link rel="icon" type="image/png" href="img/Megatuner123.png">
+    <link rel="icon" type="image/png" href="img/Megatuner_invis.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
