--- a/AppPrivacy.html
+++ b/AppPrivacy.html
@@ -12,6 +12,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="faq.html">FAQ</a></li>
         <li><a href="WhatsNew.html">What’s New</a></li>
         <li><a href="AppPrivacy.html">App Privacy</a></li>
         <li><a href="Contact.html">Contact</a></li>
