--- a/WhatsNew.html
+++ b/WhatsNew.html
@@ -6,6 +6,15 @@
   <title>Whats New - Megatuner</title>
     <link rel="icon" type="image/png" href="img/Megatuner_invis.png">
   <link rel="stylesheet" href="css/style.css">
+      <style>
+    .answer {
+      display: none;
+    }
+
+    .question {
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -23,58 +32,57 @@
   <main>
     <section id="hero">
       <ul>
-
-<p>
-  <h1>Version 1.6 (May 7, 2023)</h1>
-  <ul>  Improvements:
-   <li>  Improved app layout for a better user experience.</li>
- <li>  Updated profile tab to include a link to the supporting website.</li>
-  <li> Changed the app icon for a fresh look.</li>
-  </ul>
-</p>        
-<p>
-  <h1>Version 1.5 (Apr 29, 2023)</h1>
-  <ul>  Improvements:
-   <li>  Added incrementing and decrementing buttons on the tuning tab for adjusting the simulation time more easily.</li>
- <li>  Added version(build) number on profile tab for easier identification of the app version.</li>
- <li>  Made the megatuner image on profile tab transparent for a more polished look.</li>
-  </ul>
+  <h2 class="question">Version 1.6 (May 7, 2023)</h2>
+  <div class="answer">
+    <ul>
+      Improvements:
+      <li>Improved app layout for a better user experience.</li>
+      <li>Updated profile tab to include a link to the supporting website.</li>
+      <li>Changed the app icon for a fresh look.</li>
+    </ul>
+  </div>
+  <h2 class="question">Version 1.5 (Apr 29, 2023)</h2>
+  <div class="answer">  
+    <ul> 
+      Improvements:
+      <li>  Added incrementing and decrementing buttons on the tuning tab for adjusting the simulation time more easily.</li>
+      <li>  Added version(build) number on profile tab for easier identification of the app version.</li>
+      <li>  Made the megatuner image on profile tab transparent for a more polished look.</li>
+    </ul>
+  </div> 
 </p>
+  <h2 class="question">Version 1.4 (Apr 21, 2023)</h2>
+  <div class="answer"> 
+    <ul>
+      <li>Improvement: Added units on the vendor conversion</li>
+      <li>Bug fix: Importing error message fix...</li>
+    </ul>
+  </div>
+  <h2 class="question">Version 1.3 (Apr 5, 2023)</h2>
+  <p class="answer">Minor adjustments</p>
+  <h2 class="question">Version 1.2 (Mar 13, 2023)</h2>
+  <p class="answer">A subscription model has been implemented.</p>
+  <h2 class="question">Version 1.1 (Dec 12, 2022)</h2>
+  <p class="answer">Some minor adjustments.</p>
+  <h2 class="question">Version 1.0 (Nov 28, 2022)</h2>
+  <p class="answer"></p>
+  <script>
+    var questions = 
+document.getElementsByClassName("question");
+    for (var i = 0; i < questions.length; i++) {
+      questions[i].addEventListener("click", function() 
+{
+        this.classList.toggle("active");
+        var answer = this.nextElementSibling;
+        if (answer.style.display === "block") {
+          answer.style.display = "none";
+        } else {
+          answer.style.display = "block";
+        }
+      });
+    }
+  </script>
 
-<p>
-  <h1>Version 1.4 (Apr 21, 2023)</h1>
-  <ul>
-    <li>Improvement: Added units on the vendor conversion</li>
-    <li>Bug fix: Importing error message fix...</li>
-  </ul>
-</p>
-
-<p>
-  <h1>Version 1.3 (Apr 5, 2023)</h1>
-  <ul>
-    <li>Minor adjustments</li>
-  </ul>
-</p>
-
-<p>
-  <h1>Version 1.2 (Mar 13, 2023)</h1>
-  <ul>
-    <li>A subscription model has been implemented.</li>
-  </ul>
-</p>
-
-<p>
-  <h1>Version 1.1 (Dec 12, 2022)</h1>
-  <ul>
-    <li>Some minor adjustments.</li>
-  </ul>
-</p>
-
-<p>
-  <h1>Version 1.0 (Nov 28, 2022)</h1>
-  <ul>
-  </ul>
-</p>
 
 
   </main>
