--- a/AppPrivacy.html
+++ b/AppPrivacy.html
@@ -23,7 +23,11 @@
   <main>
     <section id="hero">
       <ul>
- <p> Under Construction... </p>
+ <p>
+  Under construction, as per now use the following:
+<a href="https://htmlpreview.github.io/?https://github.com/ChristerDalen/policy/blob/main/index.html">Link to Privacy</a>
+
+ </p>
 
      </ul>
   </main>
