--- a/faq.html
+++ b/faq.html
@@ -35,7 +35,7 @@
 	<h2 class="question">What is Megatuner?</h2>
 	<p class="answer">Megatuner is a PI/PID controller tuning app for iOS. It only needs some excited input and output data from your process loop to calculate the PID controller parameters.</p>
 	<h2 class="question">Is it free?</h2>
-	<p class="answer">Megatuner is free with the option to subscribe, however the free version is sufficient for tuning your PID controllers. The subscription option adds the following: save/load your projects, inspecting/copy-pasting your simulator model and conversion to desired DCS vendor (20 vendors as of now).</p>
+	<p class="answer">Megatuner is free with the option to subscribe, however the free version is sufficient for tuning your PI/PID controllers. The subscription option adds the following: save/load your projects, inspecting/copy-pasting your simulator model and conversion to desired DCS vendor (20 vendors as of now).</p>
 	<h2 class="question">What devices is the app compatible with?</h2>
 	<p class="answer">Megatuner can be used on iOS/iPadOS 16.0 or later, and macOS 13 or later and a Mac with Apple M1 chip or later.</p>
 	<script>
