--- a/faq.html
+++ b/faq.html
@@ -38,6 +38,12 @@
 	<p class="answer">Megatuner is free with the option to subscribe, however the free version is sufficient for tuning your PI/PID controllers. The subscription option adds the following: save/load your projects, inspecting/copy-pasting your simulator model and conversion to desired DCS vendor (20 vendors as of now).</p>
 	<h2 class="question">What devices is the app compatible with?</h2>
 	<p class="answer">Megatuner can be used on iOS/iPadOS 16.0 or later, and macOS 13 or later and a Mac with Apple M1 chip or later.</p>
+	<h2 class="question">Future Updated</h2>
+	<p class="answer"> An OPC-UA feature is in the workings, and will be added in future, making it possible for online PID controller tuning. </p>
+	<h2 class="question">Do you miss a feature?</h2>
+	<p class="answer"> Contact: 00215069@protonmail.com</p>
+	<h2 class="question">Will it be released on other platforms?</h2>
+	<p class="answer">The app might be released on Android and/or Web.</p>
 	<script>
 		var questions = 
 document.getElementsByClassName("question");
