--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact - Megatuner</title>
+  <title>FAQ - Megatuner</title>
   <link rel="icon" type="image/png" href="img/Megatuner_invis.png">
   <link rel="stylesheet" href="css/style.css">
   	<style>
