--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <ul>
         <li>User-friendly interface for simple and efficient data input and analysis</li>
         <li>Advanced algorithms for accurate and precise model and PI/PID controller tuning</li>
-        <li>Convert your PID controller parameters over to 20 different DCS vendor forms</li>
+        <li>Convert your PI/PID controller parameters over to 20 different DCS vendor forms</li>
          <li>OPC UA communication [Future]</li>
       </ul>
       <br>
