--- a/faq.html
+++ b/faq.html
@@ -48,7 +48,7 @@
 	<h2 class="question">What devices is the app compatible with?</h2>
 	<p class="answer">Megatuner can be used on iOS/iPadOS 16.0 or later, and macOS 13 or later and a Mac with Apple M1 chip or later.</p>
 	<h2 class="question">Future Updates?</h2>
-	<p class="answer"> An OPC-UA feature is in the workings, and will be added in future, making it possible for online PID controller tuning. </p>
+	<p class="answer"> An OPC-UA feature is in the workings, and will be added in future, making it possible for online PI/PID controller tuning. </p>
 	<h2 class="question">Do you miss a feature?</h2>
 	<p class="answer"> Contact: 00215069@protonmail.com</p>
 	<h2 class="question">Will it be released on other platforms?</h2>
