--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <h1>Megatuner</h1>
     <p>Our app makes it easy for you to tune your PI/PID controller using data from your control loop experiments. Our advanced algorithms analyze the data to help you find the optimal settings for your controller, ensuring optimal performance and stability.</p>
 	<p>But that's not all. With our app, you can now convert your settings to over 20 different DCS vendors, making it easier than ever to integrate your control loop with the rest of your process control system.</p>
+    <br>
 	<p>Whether you're an experienced engineer or just starting out, our PI/PID controller tuner app for iOS can help you fine-tune your control loop and improve your process control system. Download now and start optimizing your loops today!</p>
   <br>
       <h2>Features</h2>
@@ -32,7 +33,8 @@
         <li>User-friendly interface for simple and efficient data input and analysis</li>
         <li>Advanced algorithms for accurate and precise model and PI/PID controller tuning</li>
         <li>Convert your PI/PID controller parameters over to 20 different DCS vendor forms</li>
-         <li>OPC UA communication [Future]</li>
+        <li>OPC UA communication [Future]</li>
+        <li>Robuestness measures [Future]</li>
       </ul>
       <br>
 <iframe width="320" height="240" src="https://www.youtube.com/embed/b7yqsZ4sSuQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
