--- a/faq.html
+++ b/faq.html
@@ -44,14 +44,14 @@
 	<h2 class="question">What is Megatuner?</h2>
 	<p class="answer">Megatuner is a PI/PID controller tuning app for iOS. It only needs some excited input and output data from your process loop to calculate the PID controller parameters. </p>
 	<h2 class="question">What makes this app better than existing solutions?</h2>
-	<p class="answer"> Other existing solutions is usually limited to stable or integrator processes (which may be sufficient for alot of processes/systems). However, this app is not limited and can take on unstable system/processes and systems with complex poles or zeros. Paired with a system identification first step, this app may prove highly competitive.
+	<p class="answer"> Other existing solutions is usually limited to stable or integrator processes (which may be sufficient for alot of processes/systems). However, this app is not limited and can take on unstable system/processes and systems with complex poles or zeros.
 	 </p>
 	<h2 class="question">Is it free?</h2>
 	<p class="answer">Megatuner is free with the option to subscribe, however the free version is sufficient for tuning your PI/PID controllers. The subscription option adds the following: save/load your projects, inspecting/copy-pasting your simulator model and conversion to desired DCS vendor (20 vendors as of now).</p>
 	<h2 class="question">What devices is the app compatible with?</h2>
 	<p class="answer">Megatuner can be used on iOS/iPadOS 16.0 or later, and macOS 13 or later and a Mac with Apple M1 chip or later.</p>
 	<h2 class="question">Future Updates?</h2>
-	<p class="answer"> An OPC-UA feature is in the workings, and will be added in future, making it possible for online PI/PID controller tuning. </p>
+	<p class="answer"> An OPC-UA feature is in the workings, and will be added in future, making it possible for online PI/PID controller tuning. Also robustness measures, i.e. Gain margin, phasemargin, (or delay margin), are planned to be added on a later date.</p>
 	<h2 class="question">Do you miss a feature?</h2>
 	<p class="answer"> Contact: 00215069@protonmail.com</p>
 	<h2 class="question">Will it be released on other platforms?</h2>
