Added changes to the iOS app

--- a/WhatsNew.html
+++ b/WhatsNew.html
@@ -41,6 +41,14 @@
   <main>
     <section id="hero">
       <ul>
+  <h2 class="question">Version 1.7 (May 15, 2023)</h2>
+  <div class="answer">
+    <ul>
+      Improvements:
+      <li>Implemented a change to the closed loop data chart functionality. This change ensures that the closed loop data effectively fills out the chart.</li>
+      <li>Improved the user interface by introducing conditional button availability. This modification prevents users from initiating actions without appropriate input.</li>
+    </ul>
+  </div>       
   <h2 class="question">Version 1.6 (May 7, 2023)</h2>
   <div class="answer">
     <ul>
