Changed the faq

--- a/faq.html
+++ b/faq.html
@@ -42,18 +42,20 @@
     <section id="hero">
       <ul>
 	<h2 class="question">What is Megatuner?</h2>
-	<p class="answer">Megatuner is a PI/PID controller tuning app for iOS. It only needs some excited input and output data from your process loop to calculate the PID controller parameters. </p>
+	<p class="answer">Megatuner is a offline(as of now) PI/PID controller tuning app for iOS. It only needs some excited input and output data collected from your process loop to calculate the PI/PID controller parameters. </p>
 	<h2 class="question">What makes this app better than existing solutions?</h2>
-	<p class="answer"> Other existing solutions is usually limited to stable or integrator processes (which may be sufficient for alot of processes/systems). However, this app is not limited and can take on unstable system/processes and systems with complex poles or zeros.
+	<p class="answer"> Other existing solutions is usually limited to stable (first order) or integrator processes (which may be sufficient for tuning alot of processes/systems). However, this app is not limited and can take on unstable system/processes and systems with complex poles or zeros.
 	 </p>
 	<h2 class="question">Is it free?</h2>
-	<p class="answer">Megatuner is free with the option to subscribe, however the free version is sufficient for tuning your PI/PID controllers. The subscription option adds the following: save/load your projects, inspecting/copy-pasting your simulator model and conversion to desired DCS vendor (20 vendors as of now).</p>
+	<p class="answer">Megatuner is free with the option to subscribe, however while the free version is sufficient for tuning your PI/PID controllers, the subscription option adds effiency in your tuning process. The features includes: save/load your projects, inspecting/copy-pasting your simulator model and conversion to desired DCS vendor (20 vendors as of now).</p>
 	<h2 class="question">What devices is the app compatible with?</h2>
 	<p class="answer">Megatuner can be used on iOS/iPadOS 16.0 or later, and macOS 13 or later and a Mac with Apple M1 chip or later.</p>
 	<h2 class="question">Future Updates?</h2>
-	<p class="answer"> An OPC-UA feature is in the workings, and will be added in future, making it possible for online PI/PID controller tuning. Also robustness measures, i.e. Gain margin, phase margin, (or delay margin), are planned to be added on a later date.</p>
+	<p class="answer"> An option for online PI/PID controller tuning through OPC-UA will be added in future.</p>
 	<h2 class="question">Do you miss a feature?</h2>
-	<p class="answer"> Contact: 00215069@protonmail.com</p>
+	<p class="answer"> Send a feature request to 00215069@protonmail.com.</p>
+	<h2 class="question">Any success story?</h2>
+	<p class="answer"> Please write a mail to 00215069@protonmail.com where introduce your process, and show the (before) and after (using Megatuner) closed loop step step response results.</p>
 	<h2 class="question">Will it be released on other platforms?</h2>
 	<p class="answer">The app might be released on Android and/or Web.</p>
 	<script>
