--- a/WhatsNew.html
+++ b/WhatsNew.html
@@ -41,6 +41,17 @@
   <main>
     <section id="hero">
       <ul>
+  <h2 class="question">Version 1.8 (July 8, 2023)</h2>
+  <div class="answer">
+    <ul>
+      Improvements:
+      <li>Improved efficiency of the underlying PID Controller tuning routine.</li>
+      <li>Added support for importing discrete state space models, allowing users to paste and utilize models from various sources, such as 1st principles.</li>
+      <li>Importing (DAQ tab) txt-files are now supported.</li>
+      <li>Expanded language support with the addition of Arabic, Chinese, Hindi, Russian, Japanese, and Spanish translations.</li>
+      <li>The data entered into the DCS setup will not reset each time you dismiss the sheet.</li>
+    </ul>
+  </div> 
   <h2 class="question">Version 1.7 (May 15, 2023)</h2>
   <div class="answer">
     <ul>
