--- a/WhatsNew.html
+++ b/WhatsNew.html
@@ -41,6 +41,14 @@
   <main>
     <section id="hero">
       <ul>
+  <h2 class="question">Version 1.9 (Aug 23, 2023)</h2>
+  <div class="answer">
+    <ul>
+      Improvements:
+      <li> Viewing the identified state space model (i.e. the "Simulator Model" on "Identify" tab) is now free.</li>
+      <li> Improved efficiency of the underlying system identification routine. </li>
+    </ul>
+  </div> 	      
   <h2 class="question">Version 1.8 (July 8, 2023)</h2>
   <div class="answer">
     <ul>
